--- a/trunk/prototype/Bobi/Bobi/View/TransportBar.resx
+++ b/trunk/prototype/Bobi/Bobi/View/TransportBar.resx
@@ -170,4 +170,7 @@
         bhvbtnc3Y1nWWSmBGI4biBv43w38BE9OWA8H8M1VAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="timeDisplayUpdateTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
