--- a/trunk/Obi/Obi/ObiForm.resx
+++ b/trunk/Obi/Obi/ObiForm.resx
@@ -593,37 +593,37 @@
   <data name="toolStripSeparator15.Size" type="System.Drawing.Size, System.Drawing">
     <value>256, 6</value>
   </data>
-  <data name="mZoomInToolStripMenuItem.ShortcutKeyDisplayString" xml:space="preserve">
+  <data name="mView_ZoomInMenuItem.ShortcutKeyDisplayString" xml:space="preserve">
     <value>Ctrl+Alt++</value>
   </data>
-  <data name="mZoomInToolStripMenuItem.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+  <data name="mView_ZoomInMenuItem.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+Alt+Oemplus</value>
   </data>
-  <data name="mZoomInToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="mView_ZoomInMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>259, 22</value>
   </data>
-  <data name="mZoomInToolStripMenuItem.Text" xml:space="preserve">
+  <data name="mView_ZoomInMenuItem.Text" xml:space="preserve">
     <value>Zoom &amp;in</value>
   </data>
-  <data name="mZoomOutToolStripMenuItem.ShortcutKeyDisplayString" xml:space="preserve">
+  <data name="mView_ZoomOutMenuItem.ShortcutKeyDisplayString" xml:space="preserve">
     <value>Ctrl+Alt+-</value>
   </data>
-  <data name="mZoomOutToolStripMenuItem.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+  <data name="mView_ZoomOutMenuItem.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+Alt+OemMinus</value>
   </data>
-  <data name="mZoomOutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="mView_ZoomOutMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>259, 22</value>
   </data>
-  <data name="mZoomOutToolStripMenuItem.Text" xml:space="preserve">
+  <data name="mView_ZoomOutMenuItem.Text" xml:space="preserve">
     <value>Zoom &amp;out</value>
   </data>
-  <data name="mNormalSizeToolStripMenuItem.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+  <data name="mView_NormalSizeMenuItem.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+Alt+0</value>
   </data>
-  <data name="mNormalSizeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="mView_NormalSizeMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>259, 22</value>
   </data>
-  <data name="mNormalSizeToolStripMenuItem.Text" xml:space="preserve">
+  <data name="mView_NormalSizeMenuItem.Text" xml:space="preserve">
     <value>Normal si&amp;ze</value>
   </data>
   <data name="mViewToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
@@ -1460,15 +1460,16 @@
   </data>
   <data name="mProjectView.ColorSettings" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAD9PYmksIFZlcnNpb249MC4xMS4yLjMxOTc4LCBDdWx0dXJlPW5l
+        AAEAAAD/////AQAAAAAAAAAMAgAAAD9PYmksIFZlcnNpb249MC4xMS4yLjIwOTk2LCBDdWx0dXJlPW5l
         dXRyYWwsIFB1YmxpY0tleVRva2VuPW51bGwMAwAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj0yLjAu
         MC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAABFP
-        YmkuQ29sb3JTZXR0aW5ncwQAAAAQVE9DVmlld0JhY2tDb2xvchBUT0NWaWV3Rm9yZUNvbG9yElRPQ1Zp
-        ZXdVbnVzZWRDb2xvchRDb250ZW50Vmlld0JhY2tDb2xvcgQEBAQUU3lzdGVtLkRyYXdpbmcuQ29sb3ID
-        AAAAFFN5c3RlbS5EcmF3aW5nLkNvbG9yAwAAABRTeXN0ZW0uRHJhd2luZy5Db2xvcgMAAAAUU3lzdGVt
-        LkRyYXdpbmcuQ29sb3IDAAAAAgAAAAX8////FFN5c3RlbS5EcmF3aW5nLkNvbG9yBAAAAARuYW1lBXZh
-        bHVlCmtub3duQ29sb3IFc3RhdGUBAAAACQcHAwAAAAoAAAAAAAAAABgAAQAB+/////z///8KAAAAAAAA
-        AAAKAAEAAfr////8////CgAAAAAAAAAAEgABAAH5/////P///woAAAAAAAAAAAYAAQAL
+        YmkuQ29sb3JTZXR0aW5ncwUAAAAUQ29udGVudFZpZXdCYWNrQ29sb3IUUHJvamVjdFZpZXdCYWNrQ29s
+        b3IQVE9DVmlld0JhY2tDb2xvchBUT0NWaWV3Rm9yZUNvbG9yElRPQ1ZpZXdVbnVzZWRDb2xvcgQEBAQE
+        FFN5c3RlbS5EcmF3aW5nLkNvbG9yAwAAABRTeXN0ZW0uRHJhd2luZy5Db2xvcgMAAAAUU3lzdGVtLkRy
+        YXdpbmcuQ29sb3IDAAAAFFN5c3RlbS5EcmF3aW5nLkNvbG9yAwAAABRTeXN0ZW0uRHJhd2luZy5Db2xv
+        cgMAAAACAAAABfz///8UU3lzdGVtLkRyYXdpbmcuQ29sb3IEAAAABG5hbWUFdmFsdWUKa25vd25Db2xv
+        cgVzdGF0ZQEAAAAJBwcDAAAACgAAAAAAAAAABAABAAH7/////P///woAAAAAAAAAAAUAAQAB+v////z/
+        //8KAAAAAAAAAAAYAAEAAfn////8////CgAAAAAAAAAACgABAAH4/////P///woAAAAAAAAAABIAAQAL
 </value>
   </data>
   <data name="mProjectView.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
@@ -1490,7 +1491,7 @@
     <value>mProjectView</value>
   </data>
   <data name="&gt;&gt;mProjectView.Type" xml:space="preserve">
-    <value>Obi.ProjectView.ProjectView, Obi, Version=0.11.2.31978, Culture=neutral, PublicKeyToken=null</value>
+    <value>Obi.ProjectView.ProjectView, Obi, Version=0.11.2.20996, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;mProjectView.Parent" xml:space="preserve">
     <value>$this</value>
@@ -2066,22 +2067,22 @@
   <data name="&gt;&gt;toolStripSeparator15.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;mZoomInToolStripMenuItem.Name" xml:space="preserve">
-    <value>mZoomInToolStripMenuItem</value>
+  <data name="&gt;&gt;mView_ZoomInMenuItem.Name" xml:space="preserve">
+    <value>mView_ZoomInMenuItem</value>
   </data>
-  <data name="&gt;&gt;mZoomInToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;mView_ZoomInMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;mZoomOutToolStripMenuItem.Name" xml:space="preserve">
-    <value>mZoomOutToolStripMenuItem</value>
+  <data name="&gt;&gt;mView_ZoomOutMenuItem.Name" xml:space="preserve">
+    <value>mView_ZoomOutMenuItem</value>
   </data>
-  <data name="&gt;&gt;mZoomOutToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;mView_ZoomOutMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;mNormalSizeToolStripMenuItem.Name" xml:space="preserve">
-    <value>mNormalSizeToolStripMenuItem</value>
+  <data name="&gt;&gt;mView_NormalSizeMenuItem.Name" xml:space="preserve">
+    <value>mView_NormalSizeMenuItem</value>
   </data>
-  <data name="&gt;&gt;mNormalSizeToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;mView_NormalSizeMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;mSectionsToolStripMenuItem.Name" xml:space="preserve">
