--- a/trunk/Obi/Obi/ObiForm.resx
+++ b/trunk/Obi/Obi/ObiForm.resx
@@ -1420,7 +1420,7 @@
     <value>0, 606</value>
   </metadata>
   <data name="mStatusLabel.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 9.75pt</value>
+    <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="mStatusLabel.Size" type="System.Drawing.Size, System.Drawing">
     <value>943, 17</value>
@@ -1458,20 +1458,6 @@
   <data name="&gt;&gt;mStatusStrip.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="mProjectView.ColorSettings" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAD9PYmksIFZlcnNpb249MC4xMS4yLjIwOTk2LCBDdWx0dXJlPW5l
-        dXRyYWwsIFB1YmxpY0tleVRva2VuPW51bGwMAwAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj0yLjAu
-        MC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAABFP
-        YmkuQ29sb3JTZXR0aW5ncwUAAAAUQ29udGVudFZpZXdCYWNrQ29sb3IUUHJvamVjdFZpZXdCYWNrQ29s
-        b3IQVE9DVmlld0JhY2tDb2xvchBUT0NWaWV3Rm9yZUNvbG9yElRPQ1ZpZXdVbnVzZWRDb2xvcgQEBAQE
-        FFN5c3RlbS5EcmF3aW5nLkNvbG9yAwAAABRTeXN0ZW0uRHJhd2luZy5Db2xvcgMAAAAUU3lzdGVtLkRy
-        YXdpbmcuQ29sb3IDAAAAFFN5c3RlbS5EcmF3aW5nLkNvbG9yAwAAABRTeXN0ZW0uRHJhd2luZy5Db2xv
-        cgMAAAACAAAABfz///8UU3lzdGVtLkRyYXdpbmcuQ29sb3IEAAAABG5hbWUFdmFsdWUKa25vd25Db2xv
-        cgVzdGF0ZQEAAAAJBwcDAAAACgAAAAAAAAAABAABAAH7/////P///woAAAAAAAAAAAUAAQAB+v////z/
-        //8KAAAAAAAAAAAYAAEAAfn////8////CgAAAAAAAAAACgABAAH4/////P///woAAAAAAAAAABIAAQAL
-</value>
-  </data>
   <data name="mProjectView.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
   </data>
@@ -1491,7 +1477,7 @@
     <value>mProjectView</value>
   </data>
   <data name="&gt;&gt;mProjectView.Type" xml:space="preserve">
-    <value>Obi.ProjectView.ProjectView, Obi, Version=0.11.2.20996, Culture=neutral, PublicKeyToken=null</value>
+    <value>Obi.ProjectView.ProjectView, Obi, Version=0.11.2.29051, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;mProjectView.Parent" xml:space="preserve">
     <value>$this</value>
